Progress Saved, no edits to tutorial

--- a/TensorFlow/DataProcessing/data.ipynb
+++ b/TensorFlow/DataProcessing/data.ipynb
@@ -148,11 +148,26 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {
-        "id": "0F-FDnjB6t6J"
+        "id": "0F-FDnjB6t6J",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "17e2c508-dc8b-4d0a-c6fb-5a0369ba1aad"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<_TensorSliceDataset element_spec=TensorSpec(shape=(), dtype=tf.int32, name=None)>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 4
+        }
+      ],
       "source": [
         "dataset = tf.data.Dataset.from_tensor_slices([8, 3, 0, 8, 2, 1])\n",
         "dataset"
@@ -160,11 +175,28 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "metadata": {
-        "id": "pwJsRJ-FbDcJ"
+        "id": "pwJsRJ-FbDcJ",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "03d415ec-5398-42e6-c8d5-5cfb8017b5e4"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "8\n",
+            "3\n",
+            "0\n",
+            "8\n",
+            "2\n",
+            "1\n"
+          ]
+        }
+      ],
       "source": [
         "for elem in dataset:\n",
         "  print(elem.numpy())"
@@ -182,11 +214,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 8,
       "metadata": {
-        "id": "03w9oxFfbDcM"
+        "id": "03w9oxFfbDcM",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "921fd778-ae2b-403d-b23d-e3c0f45c759e"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "8\n"
+          ]
+        }
+      ],
       "source": [
         "it = iter(dataset)\n",
         "\n",
